--- a/.github/workflows/predict_deploy_heal.yml
+++ b/.github/workflows/predict_deploy_heal.yml
@@ -5,6 +5,11 @@ on:
   push:
     branches: [ main ]
 
+env:
+  AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+  AWS_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+  ECR_REPO: ${{ secrets.ECR_REPO }}
+
 jobs:
   build-deploy-heal:
     runs-on: ubuntu-latest
@@ -13,15 +18,10 @@ jobs:
     - name: Checkout Repo
       uses: actions/checkout@v3
 
-    - name: Build Docker Image
-      env:
-        AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
-        AWS_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-        ECR_REPO: ${{ secrets.ECR_REPO }}
+    - name: Build and Push Docker Image
       run: |
-        docker build -t ${{ env.ECR_REPOSITORY }}:${{ github.sha }} app
-        aws ecr get-login-password --region $AWS_REGION \
-          | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
+        docker build -t $ECR_REPO:${{ github.sha }} app
+        aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
         docker tag $ECR_REPO:${{ github.sha }} $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO:${{ github.sha }}
         docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO:${{ github.sha }}
 
@@ -29,18 +29,17 @@ jobs:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
       run: |
-        aws eks update-kubeconfig --region $AWS_DEFAULT_REGION --name ${{ secrets.EKS_CLUSTER_NAME }}
+        aws eks update-kubeconfig --region $AWS_REGION --name ${{ secrets.EKS_CLUSTER_NAME }}
         kubectl apply -f kubernetes/deployment.yaml
         kubectl apply -f kubernetes/service.yaml
 
     - name: Predict Failure Probability
       id: predict
       run: |
-        # Simulate metrics collection
         echo '{"cpu_usage":85.0,"memory_usage":70.0,"error_count":1,"test_passed":true,"build_time":90}' > metrics.json
         prob=$(python ml_model/predict_failure.py --input-json metrics.json)
+        echo "fail_prob=$prob"
         echo "fail_prob=$prob" >> $GITHUB_OUTPUT
 
     - name: Auto-Heal if Needed
