--- a/.github/workflows/predict_deploy_heal.yml
+++ b/.github/workflows/predict_deploy_heal.yml
@@ -20,9 +20,7 @@ jobs:
 
       - name: Install kubectl
         run: |
-          # Fetch the latest stable version tag
           K8S_VERSION=$(curl -L -s https://dl.k8s.io/release/stable.txt)
-          # Download kubectl binary and save as 'kubectl'
           curl -L "https://dl.k8s.io/release/${K8S_VERSION}/bin/linux/amd64/kubectl" -o kubectl
           chmod +x kubectl
           sudo mv kubectl /usr/local/bin/
@@ -30,42 +28,35 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-region:             ${{ secrets.AWS_DEFAULT_REGION }}
+          aws-region:             ${{ env.AWS_REGION }}
           aws-access-key-id:      ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
+      - name: Configure kubectl for EKS
+        uses: aws-actions/eks-update-kubeconfig@v1
+        with:
+          region:       ${{ env.AWS_REGION }}
+          cluster-name: ${{ secrets.EKS_CLUSTER_NAME }}
+
       - name: Build & Push Docker Image to ECR
         run: |
-          # Build app image
           docker build -t $ECR_REPO:${{ github.sha }} app
           docker tag $ECR_REPO:${{ github.sha }} \
             $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO:${{ github.sha }}
-
-          # Login & push
           aws ecr get-login-password --region $AWS_REGION \
             | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
           docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO:${{ github.sha }}
 
-      - name: Update kubeconfig
-        run: |
-          aws eks update-kubeconfig \
-            --region $AWS_REGION \
-            --name ${{ secrets.EKS_CLUSTER_NAME }}
-
       - name: Deploy to EKS
         run: |
-          # Zero-downtime image update
           kubectl set image deployment/your-app-deployment \
-            app-container=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO:${{ github.sha }} \
-            --record
+            app-container=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO:${{ github.sha }}
           kubectl rollout status deployment/your-app-deployment --timeout=120s
 
       - name: Predict Failure Probability
         id: predict
         run: |
-          # Gather metrics (replace this with real metrics collection)
           echo '{"cpu_usage":85.0,"memory_usage":70.0,"error_count":1,"test_passed":true,"build_time":90}' > metrics.json
-          # Run prediction script
           prob=$(python ml_model/predict_failure.py --input-json metrics.json)
           echo "fail_prob=$prob" >> $GITHUB_OUTPUT
 
@@ -74,13 +65,10 @@ jobs:
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
         run: |
-          # Perform auto-heal actions
           python pipeline/scripts/smart_auto_heal.py \
             --deployment your-app-deployment \
             --namespace default \
             --replicas 3
-
-          # Send Slack notification
           curl -X POST -H 'Content-type: application/json' \
             --data "{\"text\":\"Auto-heal triggered: rolled back or scaled to 3 replicas.\"}" \
             $SLACK_WEBHOOK_URL
