--- a/.github/workflows/predict_deploy_heal.yml
+++ b/.github/workflows/predict_deploy_heal.yml
@@ -33,10 +33,9 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: Configure kubectl for EKS
-        uses: aws-actions/amazon-eks-update-kubeconfig@v1
-        with:
-          region:       ${{ env.AWS_REGION }}
-          cluster-name: ${{ secrets.EKS_CLUSTER_NAME }}
+        run: aws eks update-kubeconfig \
+               --region ${{ env.AWS_REGION }} \
+               --name ${{ secrets.EKS_CLUSTER_NAME }}
 
       - name: Build & Push Docker Image to ECR
         run: |
