--- a/.github/workflows/predict_deploy_heal.yml
+++ b/.github/workflows/predict_deploy_heal.yml
@@ -18,13 +18,6 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v3
 
-      - name: Install kubectl
-        run: |
-          K8S_VERSION=$(curl -L -s https://dl.k8s.io/release/stable.txt)
-          curl -L "https://dl.k8s.io/release/${K8S_VERSION}/bin/linux/amd64/kubectl" -o kubectl
-          chmod +x kubectl
-          sudo mv kubectl /usr/local/bin/
-
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
@@ -32,11 +25,23 @@ jobs:
           aws-access-key-id:     ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
+      - name: Install AWS CLI v2
+        uses: aws-actions/aws-cli@v2
+        with:
+          version: "2.11.0"
+
+      - name: Install kubectl
+        run: |
+          K8S_VERSION=$(curl -L -s https://dl.k8s.io/release/stable.txt)
+          curl -L "https://dl.k8s.io/release/${K8S_VERSION}/bin/linux/amd64/kubectl" -o kubectl
+          chmod +x kubectl
+          sudo mv kubectl /usr/local/bin/
+
       - name: Configure kubectl for EKS
         run: |
           aws eks update-kubeconfig \
             --region ${{ env.AWS_REGION }} \
-            --name ${{ secrets.EKS_CLUSTER_NAME }}
+            --name   ${{ secrets.EKS_CLUSTER_NAME }}
 
       # ────── DEBUGGING BLOCK ──────
       - name: Verify AWS credentials
@@ -47,7 +52,6 @@ jobs:
 
       - name: Test kubectl connectivity
         run: kubectl get nodes
-
       # ────── end DEBUGGING ──────
 
       - name: Build & Push Docker Image to ECR
