--- a/.github/workflows/predict_deploy_heal.yml
+++ b/.github/workflows/predict_deploy_heal.yml
@@ -11,9 +11,9 @@ permissions:
   contents: read               # checkout repo
 
 env:
-  AWS_REGION:      ${{ secrets.AWS_REGION }}       # e.g. ap-southeast-2
-  AWS_ACCOUNT_ID:  ${{ secrets.AWS_ACCOUNT_ID }}
-  ECR_REPO:        ${{ secrets.ECR_REPO }}
+  AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}  # e.g. ap-southeast-2
+  AWS_ACCOUNT_ID:      ${{ secrets.AWS_ACCOUNT_ID }}
+  ECR_REPO:            ${{ secrets.ECR_REPO }}
 
 jobs:
   build-deploy-heal:
@@ -28,9 +28,9 @@ jobs:
       uses: aws-actions/configure-aws-credentials@v2
       with:
         role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
-        aws-region:     ${{ env.AWS_REGION }}
+        aws-region:     ${{ env.AWS_DEFAULT_REGION }}
 
-    # 🔍 DEBUG: show the exact caller ARN (helps if EKS auth fails)
+    # 🔍 DEBUG: show the exact caller ARN
     - name: Show caller identity
       run: aws sts get-caller-identity
 
@@ -55,7 +55,7 @@ jobs:
     - name: Configure kubectl for EKS
       run: |
         aws eks update-kubeconfig \
-          --region  $AWS_REGION \
+          --region  $AWS_DEFAULT_REGION \
           --name    ${{ secrets.EKS_CLUSTER_NAME }} \
           --role-arn ${{ secrets.AWS_ROLE_ARN }}
 
@@ -67,17 +67,17 @@ jobs:
       run: |
         docker build -t $ECR_REPO:${{ github.sha }} app
         docker tag  $ECR_REPO:${{ github.sha }} \
-          $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO:${{ github.sha }}
-        aws ecr get-login-password --region $AWS_REGION | \
+          $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$ECR_REPO:${{ github.sha }}
+        aws ecr get-login-password --region $AWS_DEFAULT_REGION | \
           docker login --username AWS --password-stdin \
-          $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
-        docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO:${{ github.sha }}
+          $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
+        docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$ECR_REPO:${{ github.sha }}
 
     # ── Deploy to EKS ─────────────────────────────────────────────────
     - name: Deploy to EKS
       run: |
         kubectl set image deployment/your-app-deployment \
-          app-container=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO:${{ github.sha }}
+          app-container=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$ECR_REPO:${{ github.sha }}
         kubectl rollout status deployment/your-app-deployment --timeout=120s
 
     # ── Python setup & inference ──────────────────────────────────────
@@ -111,7 +111,6 @@ jobs:
           --deployment your-app-deployment \
           --namespace default \
           --replicas 3
-
         curl -X POST -H "Content-Type: application/json" \
           --data "{\"text\":\"Auto-heal triggered: scaled to 3 replicas (fail_prob=${{ env.fail_prob }}).\"}" \
           $SLACK_WEBHOOK_URL
