--- a/.github/workflows/predict_deploy_heal.yml
+++ b/.github/workflows/predict_deploy_heal.yml
@@ -14,8 +14,8 @@ env:
   AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
   AWS_ACCOUNT_ID:     ${{ secrets.AWS_ACCOUNT_ID }}
   ECR_REPO:           ${{ secrets.ECR_REPO }}
-  MODEL_ECR_REPO:     ${{ secrets.MODEL_ECR_REPO }}   # your private repo name: "sklearn-inference"
-  IMAGE_TAG:          "1.0-1-cpu-py3"                # pick a valid tag from the public ECR Gallery
+  MODEL_ECR_REPO:     ${{ secrets.MODEL_ECR_REPO }}   # your private repo name, e.g. "sklearn-inference"
+  IMAGE_TAG:          "1.0-1-cpu-py3"                # pick a valid public.ecr.aws tag
   MODEL_S3_PATH:      ${{ secrets.MODEL_S3_PATH }}   # e.g. "s3://ai-devops-models-prod/model.tar.gz"
 
 jobs:
@@ -72,30 +72,32 @@ jobs:
 
       - name: Mirror SageMaker sklearn image into ECR
         run: |
-          # private repo URI
           REPO_URI="$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$MODEL_ECR_REPO"
           TAG="$IMAGE_TAG"
 
-          # 1) Pull from the public gallery (literal repo name)
+          # 0) Authenticate to the public ECR registry (avoids anonymous rate limits)
+          aws ecr-public get-login-password --region us-east-1 \
+            | docker login --username AWS --password-stdin public.ecr.aws
+
+          # 1) Pull the official SageMaker sklearn image
           docker pull public.ecr.aws/sagemaker/sklearn-inference:$TAG
 
-          # 2) Tag into your own ECR
+          # 2) Tag it into your private ECR
           docker tag \
             public.ecr.aws/sagemaker/sklearn-inference:$TAG \
             $REPO_URI:$TAG
 
-          # 3) Login & push
+          # 3) Login to your private ECR & push
           aws ecr get-login-password --region $AWS_DEFAULT_REGION \
             | docker login --username AWS --password-stdin \
               $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
           docker push $REPO_URI:$TAG
 
-          # 4) Export for later steps
+          # 4) Expose the resulting URI to later steps
           echo "MODEL_IMAGE_URI=$REPO_URI:$TAG" >> $GITHUB_ENV
 
       - name: Upload model artifact to S3
-        run: |
-          aws s3 cp ml_model/models/model.tar.gz $MODEL_S3_PATH
+        run: aws s3 cp ml_model/models/model.tar.gz $MODEL_S3_PATH
 
       - name: Deploy app to EKS
         run: |
