--- a/.github/workflows/predict_deploy_heal.yml
+++ b/.github/workflows/predict_deploy_heal.yml
@@ -14,9 +14,9 @@ env:
   AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
   AWS_ACCOUNT_ID:     ${{ secrets.AWS_ACCOUNT_ID }}
   ECR_REPO:           ${{ secrets.ECR_REPO }}
-  MODEL_ECR_REPO:     ${{ secrets.MODEL_ECR_REPO }}   # your private repo name, e.g. "sklearn-inference"
-  IMAGE_TAG:          "1.0-1-cpu-py3"                # pick a valid public.ecr.aws tag
-  MODEL_S3_PATH:      ${{ secrets.MODEL_S3_PATH }}   # e.g. "s3://ai-devops-models-prod/model.tar.gz"
+  MODEL_ECR_REPO:     ${{ secrets.MODEL_ECR_REPO }}   # private repo name, ex: "sklearn-inference"
+  IMAGE_TAG:          "1.0-1-cpu-py3"                # valid public.ecr.aws tag
+  MODEL_S3_PATH:      ${{ secrets.MODEL_S3_PATH }}   # ex: "s3://ai-devops-models-prod/model.tar.gz"
 
 jobs:
   build-deploy-heal:
@@ -72,19 +72,20 @@ jobs:
 
       - name: Mirror SageMaker sklearn image into ECR
         run: |
+          # private repo URI
           REPO_URI="$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$MODEL_ECR_REPO"
           TAG="$IMAGE_TAG"
 
-          # 0) Authenticate to the public ECR registry (avoids anonymous rate limits)
+          # 0) Authenticate to the public ECR registry
           aws ecr-public get-login-password --region us-east-1 \
             | docker login --username AWS --password-stdin public.ecr.aws
 
-          # 1) Pull the official SageMaker sklearn image
-          docker pull public.ecr.aws/sagemaker/sklearn-inference:$TAG
+          # 1) Pull the official SageMaker sklearn image using your MODEL_ECR_REPO variable
+          docker pull public.ecr.aws/sagemaker/$MODEL_ECR_REPO:$TAG
 
           # 2) Tag it into your private ECR
           docker tag \
-            public.ecr.aws/sagemaker/sklearn-inference:$TAG \
+            public.ecr.aws/sagemaker/$MODEL_ECR_REPO:$TAG \
             $REPO_URI:$TAG
 
           # 3) Login to your private ECR & push
